fixed banner for Content Editors, text-wrap: balanced for page titles

--- a/themes/sector_starter/src/layout/regions/hero.scss
+++ b/themes/sector_starter/src/layout/regions/hero.scss
@@ -11,9 +11,9 @@
 }
 
 .hero__wallpaper {
-  @apply absolute top-1/2 left-1/2 z-0 w-full h-full transform -translate-x-1/2 -translate-y-1/2;
+  @apply absolute top-1/2 left-1/2 z-0 w-full h-full transform -translate-x-1/2 -translate-y-1/2 h-full w-full;
 
-  *:not(.contextual) {
+  > .field *:not(.contextual) {
     @apply w-full h-full;
   }
 
